<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/green"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="31dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="226dp"
                    android:layout_height="292dp"
                    android:contentDescription="@string/profile_picture_desc"
                    app:layout_constraintBottom_toTopOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/avatarg"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/username"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="@+id/imageView8"
                    app:layout_constraintStart_toStartOf="@+id/imageView8"
                    app:layout_constraintTop_toBottomOf="@+id/imageView8" />


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.315"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/editTextTextEmailAddress2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/contact"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress2"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

                <TextView
                    android:id="@+id/editTextPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/description"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/editTextPhone"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:maxWidth="200sp"
                    android:text="@string/hi"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView8"
                    app:layout_constraintHorizontal_bias="0.244"
                    app:layout_constraintStart_toStartOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="27dp"
                    android:contentDescription="@string/desc"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextTextEmailAddress2"
                    app:layout_constraintEnd_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/envelope" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="64dp"
                    android:contentDescription="@string/phonceicon"
                    android:importantForAccessibility="no"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextPhone"
                    app:layout_constraintEnd_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toTopOf="@+id/textView7"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/phone" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toStartOf="@+id/textView8"
                    app:layout_constraintTop_toTopOf="@+id/textView8"
                    app:srcCompat="@drawable/comment"
                    android:contentDescription="@string/comment_icon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>